--- a/src/libcu.tinytcl/libcu.tinytcl.vcxproj
+++ b/src/libcu.tinytcl/libcu.tinytcl.vcxproj
@@ -36,34 +36,34 @@
   </ItemGroup>
   <ItemGroup Condition="'$(CUARCH)'!='cpu'">
     <CudaCompile Include="libcu.tinytcl.cu" />
-    <None Include="dos.cu" />
-    <None Include="regex_compat.cu" />
-    <None Include="tclAlloc.cu" />
-    <None Include="tclAssem.cu" />
-    <None Include="tclBasic.cu" />
-    <None Include="tclCmdAH.cu" />
-    <None Include="tclCmdIL.cu" />
-    <None Include="tclCmdMZ.cu" />
-    <None Include="tclExpr.cu" />
-    <None Include="tclGet.cu" />
-    <None Include="tclGlob.cu" />
-    <None Include="tclGpuAZ.cu" />
-    <None Include="tclGpuEnv.cu" />
-    <None Include="tclGpuStr.cu" />
-    <None Include="tclGpuUtil.cu" />
-    <None Include="tclHash.cu" />
-    <None Include="tclHistory.cu" />
-    <None Include="tclLoad.cu" />
-    <None Include="tclLoad-noop.cu" />
-    <None Include="tclObj.cu" />
-    <None Include="tclParse.cu" />
-    <None Include="tclProc.cu" />
-    <None Include="tclUtil.cu" />
-    <None Include="tclVar.cu" />
-    <None Include="tclExDbg.cu" />
-    <None Include="tclExtensions.cu" />
-    <None Include="tclExGen.cu" />
-    <None Include="TclMod.cu" />
+    <CudaCompile Include="dos.cu" />
+    <CudaCompile Include="regex_compat.cu" />
+    <CudaCompile Include="tclAlloc.cu" />
+    <CudaCompile Include="tclAssem.cu" />
+    <CudaCompile Include="tclBasic.cu" />
+    <CudaCompile Include="tclCmdAH.cu" />
+    <CudaCompile Include="tclCmdIL.cu" />
+    <CudaCompile Include="tclCmdMZ.cu" />
+    <CudaCompile Include="tclExpr.cu" />
+    <CudaCompile Include="tclGet.cu" />
+    <CudaCompile Include="tclGlob.cu" />
+    <CudaCompile Include="tclGpuAZ.cu" />
+    <CudaCompile Include="tclGpuEnv.cu" />
+    <CudaCompile Include="tclGpuStr.cu" />
+    <CudaCompile Include="tclGpuUtil.cu" />
+    <CudaCompile Include="tclHash.cu" />
+    <CudaCompile Include="tclHistory.cu" />
+    <CudaCompile Include="tclLoad.cu" />
+    <CudaCompile Include="tclLoad-noop.cu" />
+    <CudaCompile Include="tclObj.cu" />
+    <CudaCompile Include="tclParse.cu" />
+    <CudaCompile Include="tclProc.cu" />
+    <CudaCompile Include="tclUtil.cu" />
+    <CudaCompile Include="tclVar.cu" />
+    <CudaCompile Include="tclExDbg.cu" />
+    <CudaCompile Include="tclExtensions.cu" />
+    <CudaCompile Include="tclExGen.cu" />
+    <CudaCompile Include="TclMod.cu" />
   </ItemGroup>
   <ItemGroup Condition="'$(CUARCH)'=='cpu'">
     <None Include="libcu.tinytcl.cu" />
@@ -195,7 +195,7 @@
     <CudaCompile>
       <Include>$(SolutionDir)include;%(Include)</Include>
       <GenerateRelocatableDeviceCode>true</GenerateRelocatableDeviceCode>
-      <Defines>LIBCUFORCE;__CUDA_RUNTIME_H__</Defines>
+      <Defines>LIBCUFORCE</Defines>
       <CodeGeneration>compute_$(CUARCH),sm_$(CUARCH)</CodeGeneration>
       <AdditionalOptions>-Xcudafe "--diag_suppress=branch_past_initialization" %(AdditionalOptions)</AdditionalOptions>
     </CudaCompile>
@@ -220,7 +220,7 @@
       <Include>$(SolutionDir)include;%(Include)</Include>
       <GenerateRelocatableDeviceCode>true</GenerateRelocatableDeviceCode>
       <TargetMachinePlatform>64</TargetMachinePlatform>
-      <Defines>LIBCUFORCE;__CUDA_RUNTIME_H__</Defines>
+      <Defines>LIBCUFORCE</Defines>
       <CodeGeneration>compute_$(CUARCH),sm_$(CUARCH)</CodeGeneration>
       <AdditionalOptions>-Xcudafe "--diag_suppress=branch_past_initialization" %(AdditionalOptions)</AdditionalOptions>
     </CudaCompile>
@@ -248,7 +248,7 @@
     <CudaCompile>
       <Include>$(SolutionDir)include;%(Include)</Include>
       <GenerateRelocatableDeviceCode>true</GenerateRelocatableDeviceCode>
-      <Defines>LIBCUFORCE;__CUDA_RUNTIME_H__</Defines>
+      <Defines>LIBCUFORCE</Defines>
       <CodeGeneration>compute_$(CUARCH),sm_$(CUARCH)</CodeGeneration>
       <AdditionalOptions>-Xcudafe "--diag_suppress=branch_past_initialization" %(AdditionalOptions)</AdditionalOptions>
     </CudaCompile>
@@ -276,8 +276,8 @@
     <CudaCompile>
       <Include>$(SolutionDir)include;%(Include)</Include>
       <GenerateRelocatableDeviceCode>true</GenerateRelocatableDeviceCode>
-      <Defines>LIBCUFORCE;__CUDA_RUNTIME_H__</Defines>
       <TargetMachinePlatform>64</TargetMachinePlatform>
+      <Defines>LIBCUFORCE</Defines>
       <CodeGeneration>compute_$(CUARCH),sm_$(CUARCH)</CodeGeneration>
       <AdditionalOptions>-Xcudafe "--diag_suppress=branch_past_initialization" %(AdditionalOptions)</AdditionalOptions>
     </CudaCompile>
