--- a/src/libcu.jimtcl/libcu.jimtcl.vcxproj
+++ b/src/libcu.jimtcl/libcu.jimtcl.vcxproj
@@ -34,49 +34,81 @@
     <ClInclude Include="jimex.h" />
     <ClInclude Include="utf8.h" />
   </ItemGroup>
-  <ItemGroup>
+  <ItemGroup Condition="'$(CUARCH)'!='cpu'">
     <CudaCompile Include="libcu.jimtcl.cu" />
-    <CudaCompile Include="jim.cu" />
-    <CudaCompile Include="jim-aio.cu" />
-    <CudaCompile Include="jim-array.cu" />
-    <CudaCompile Include="jim-clock.cu" />
-    <CudaCompile Include="jim-eventloop.cu" />
-    <CudaCompile Include="jim-exec.cu" />
-    <CudaCompile Include="jim-file.cu" />
-    <CudaCompile Include="jim-format.cu" />
-    <CudaCompile Include="jim-gpu.cu" />
-    <CudaCompile Include="jim-history.cu" />
-    <CudaCompile Include="jim-interactive.cu" />
-    <CudaCompile Include="jim-load.cu" />
-    <CudaCompile Include="jim-namespace.cu" />
-    <CudaCompile Include="jim-pack.cu" />
-    <CudaCompile Include="jim-package.cu" />
-    <CudaCompile Include="jim-posix.cu">
+    <None Include="jim.cu" />
+    <None Include="jim-aio.cu" />
+    <None Include="jim-array.cu" />
+    <None Include="jim-clock.cu" />
+    <None Include="jim-eventloop.cu" />
+    <None Include="jim-exec.cu" />
+    <None Include="jim-file.cu" />
+    <None Include="jim-format.cu" />
+    <None Include="jim-gpu.cu" />
+    <None Include="jim-history.cu" />
+    <None Include="jim-interactive.cu" />
+    <None Include="jim-load.cu" />
+    <None Include="jim-namespace.cu" />
+    <None Include="jim-pack.cu" />
+    <None Include="jim-package.cu" />
+    <None Include="jim-posix.cu" />
+    <None Include="jim-readdir.cu" />
+    <None Include="jim-readline.cu" />
+    <None Include="jim-regexp.cu" />
+    <None Include="jim-sdl.cu" />
+    <None Include="jim-signal.cu" />
+    <None Include="jim-sqlite3.cu" />
+    <None Include="jim-subcmd.cu" />
+    <None Include="jim-syslog.cu" />
+    <None Include="jim-tclprefix.cu" />
+    <None Include="jim-win32compat.cu" />
+    <None Include="jimex.cu" />
+    <None Include="init.cu" />
+    <None Include="utf8.cu" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(CUARCH)'=='cpu'">
+    <None Include="libcu.jimtcl.cu" />
+    <ClCompile Include="jim.cu" />
+    <ClCompile Include="jim-aio.cu" />
+    <ClCompile Include="jim-array.cu" />
+    <ClCompile Include="jim-clock.cu" />
+    <ClCompile Include="jim-eventloop.cu" />
+    <ClCompile Include="jim-exec.cu" />
+    <ClCompile Include="jim-file.cu" />
+    <ClCompile Include="jim-format.cu" />
+    <ClCompile Include="jim-gpu.cu" />
+    <ClCompile Include="jim-history.cu" />
+    <ClCompile Include="jim-interactive.cu" />
+    <ClCompile Include="jim-load.cu" />
+    <ClCompile Include="jim-namespace.cu" />
+    <ClCompile Include="jim-pack.cu" />
+    <ClCompile Include="jim-package.cu" />
+    <ClCompile Include="jim-posix.cu">
       <ExcludedFromBuild>true</ExcludedFromBuild>
-    </CudaCompile>
-    <CudaCompile Include="jim-readdir.cu" />
-    <CudaCompile Include="jim-readline.cu">
+    </ClCompile>
+    <ClCompile Include="jim-readdir.cu" />
+    <ClCompile Include="jim-readline.cu">
       <ExcludedFromBuild>true</ExcludedFromBuild>
-    </CudaCompile>
-    <CudaCompile Include="jim-regexp.cu" />
-    <CudaCompile Include="jim-sdl.cu">
+    </ClCompile>
+    <ClCompile Include="jim-regexp.cu" />
+    <ClCompile Include="jim-sdl.cu">
       <ExcludedFromBuild>true</ExcludedFromBuild>
-    </CudaCompile>
-    <CudaCompile Include="jim-signal.cu">
+    </ClCompile>
+    <ClCompile Include="jim-signal.cu">
       <ExcludedFromBuild>true</ExcludedFromBuild>
-    </CudaCompile>
-    <CudaCompile Include="jim-sqlite3.cu">
+    </ClCompile>
+    <ClCompile Include="jim-sqlite3.cu">
       <ExcludedFromBuild>true</ExcludedFromBuild>
-    </CudaCompile>
-    <CudaCompile Include="jim-subcmd.cu" />
-    <CudaCompile Include="jim-syslog.cu">
+    </ClCompile>
+    <ClCompile Include="jim-subcmd.cu" />
+    <ClCompile Include="jim-syslog.cu">
       <ExcludedFromBuild>true</ExcludedFromBuild>
-    </CudaCompile>
-    <CudaCompile Include="jim-tclprefix.cu" />
-    <CudaCompile Include="jim-win32compat.cu" />
-    <CudaCompile Include="jimex.cu" />
-    <CudaCompile Include="init.cu" />
-    <CudaCompile Include="utf8.cu" />
+    </ClCompile>
+    <ClCompile Include="jim-tclprefix.cu" />
+    <ClCompile Include="jim-win32compat.cu" />
+    <ClCompile Include="jimex.cu" />
+    <ClCompile Include="init.cu" />
+    <ClCompile Include="utf8.cu" />
   </ItemGroup>
   <ItemGroup>
     <None Include="libcu.jimtcl.native.nuspec" />
@@ -92,26 +124,26 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>MultiByte</CharacterSet>
     <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>MultiByte</CharacterSet>
     <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
     <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
@@ -162,12 +194,12 @@
       <AdditionalLibraryDirectories>$(OutDir);$(CudaToolkitLibDir)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command Condition="'$(CUARCH)'!='cpu'">"$(CudaToolkitBinDir)\nvcc.exe" -m=32 -arch=sm_$(CUARCH) -lib "$(IntDir)RTcl.cu.obj" -o "$(OutDir)libcu.jimtcl.$(CUARCH).lib"</Command>
+      <Command Condition="'$(CUARCH)'!='cpu'">"$(CudaToolkitBinDir)\nvcc.exe" -m=32 -arch=sm_$(CUARCH) -lib "$(IntDir)libcu.jimtcl.cu.obj" -o "$(OutDir)libcu.jimtcl.$(CUARCH).lib"</Command>
     </PostBuildEvent>
     <CudaCompile>
       <Include>$(SolutionDir)include;%(Include)</Include>
       <GenerateRelocatableDeviceCode>true</GenerateRelocatableDeviceCode>
-      <Defines>__CUDA_RUNTIME_H__</Defines>
+      <CodeGeneration>compute_$(CUARCH),sm_$(CUARCH)</CodeGeneration>
       <AdditionalOptions>-Xcudafe "--diag_suppress=branch_past_initialization" %(AdditionalOptions)</AdditionalOptions>
     </CudaCompile>
   </ItemDefinitionGroup>
@@ -185,7 +217,7 @@
       <AdditionalLibraryDirectories>$(OutDir);$(CudaToolkitLibDir)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command Condition="'$(CUARCH)'!='cpu'">"$(CudaToolkitBinDir)\nvcc.exe" -m=64 -arch=sm_$(CUARCH) -lib "$(IntDir)RTcl.cu.obj" -o "$(OutDir)libcu.jimtcl.$(CUARCH).lib"</Command>
+      <Command Condition="'$(CUARCH)'!='cpu'">"$(CudaToolkitBinDir)\nvcc.exe" -m=64 -arch=sm_$(CUARCH) -lib "$(IntDir)libcu.jimtcl.cu.obj" -o "$(OutDir)libcu.jimtcl.$(CUARCH).lib"</Command>
     </PostBuildEvent>
     <CudaCompile>
       <Include>$(SolutionDir)include;%(Include)</Include>
@@ -213,7 +245,7 @@
       <AdditionalLibraryDirectories>$(OutDir);$(CudaToolkitLibDir)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command Condition="'$(CUARCH)'!='cpu'">"$(CudaToolkitBinDir)\nvcc.exe" -m=32 -arch=sm_$(CUARCH) -lib "$(IntDir)RTcl.cu.obj" -o "$(OutDir)libcu.jimtcl.$(CUARCH).lib"</Command>
+      <Command Condition="'$(CUARCH)'!='cpu'">"$(CudaToolkitBinDir)\nvcc.exe" -m=32 -arch=sm_$(CUARCH) -lib "$(IntDir)libcu.jimtcl.cu.obj" -o "$(OutDir)libcu.jimtcl.$(CUARCH).lib"</Command>
     </PostBuildEvent>
     <CudaCompile>
       <Include>$(SolutionDir)include;%(Include)</Include>
@@ -240,7 +272,7 @@
       <AdditionalLibraryDirectories>$(OutDir);$(CudaToolkitLibDir)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command Condition="'$(CUARCH)'!='cpu'">"$(CudaToolkitBinDir)\nvcc.exe" -m=64 -arch=sm_$(CUARCH) -lib "$(IntDir)RTcl.cu.obj" -o "$(OutDir)libcu.jimtcl.$(CUARCH).lib"</Command>
+      <Command Condition="'$(CUARCH)'!='cpu'">"$(CudaToolkitBinDir)\nvcc.exe" -m=64 -arch=sm_$(CUARCH) -lib "$(IntDir)libcu.jimtcl.cu.obj" -o "$(OutDir)libcu.jimtcl.$(CUARCH).lib"</Command>
     </PostBuildEvent>
     <CudaCompile>
       <Include>$(SolutionDir)include;%(Include)</Include>
