--- a/src/jimtcl/jimtcl.vcxproj.filters
+++ b/src/jimtcl/jimtcl.vcxproj.filters
@@ -226,7 +226,7 @@
     <None Include="tests\while.test">
       <Filter>tests</Filter>
     </None>
-    <None Include="Libcu-JimTcl.Native.nuspec" />
+    <None Include="libcu-jimtcl.native.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="tests">
