--- a/src/libcu.falloc/libcu.falloc.native.nuspec
+++ b/src/libcu.falloc/libcu.falloc.native.nuspec
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package>
   <metadata>
-    <id>Libcu.falloc.Native</id>
+    <id>Libcu.Falloc.Native</id>
     <version>0.5.0</version>
-    <title>Libcu falloc</title>
+    <title>Libcu Falloc</title>
     <authors>Contoso</authors>
     <owners>Contoso</owners>
     <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
@@ -15,12 +15,12 @@
     <language>en-US</language>
   </metadata>
   <files>
-    <file src="_build\**\libcu.*.lib" exclude="_build\**\libcu.tinytcl.*.lib;_build\**\libcu.jimtcl.*.lib;" target="build\native\lib" />
-    <file src="libcu\*.targets" target="build\native" />
-    <file src="libcu\**\*.h" exclude="libcu\_*\**\*;libcu\GL\*" target="build\native\include" />
-    <file src="libcu\_content\*" target="content" />
-    <file src="libcu\**\*.cpp" exclude="libcu\Debug\*;libcu\Release\*;libcu\x64\**\*" target="src" />
-    <file src="libcu\**\*.cu" exclude="libcu\_*\**\*" target="src" />
-    <file src="libcu\**\*.h" exclude="libcu\_*\**\*;libcu\GL\*" target="src" />
+    <file src="_build\**\libcu.falloc.*.lib" target="build\native\lib" />
+    <file src="src\libcu.falloc\*.targets" target="build\native" />
+    <file src="src\libcu.falloc\**\*.h" exclude="src\libcu.falloc\_*\**\*" target="build\native\include" />
+    <!--<file src="src\libcu.falloc\_content\*" target="content" />-->
+    <file src="src\libcu.falloc\**\*.cpp" exclude="src\libcu.falloc\_*\**\*;src\libcu.falloc\Debug\*;src\libcu.falloc\Release\*;src\libcu.falloc\x64\**\*" target="src" />
+    <file src="src\libcu.falloc\**\*.cu" exclude="src\libcu.falloc\_*\**\*" target="src" />
+    <file src="src\libcu.falloc\**\*.h" exclude="src\libcu.falloc\_*\**\*" target="src" />
   </files>
 </package>
