--- a/src/libcu.data/libcu.data.vcxproj
+++ b/src/libcu.data/libcu.data.vcxproj
@@ -24,72 +24,18 @@
     <ShortPlatform Condition="'$(Platform)'=='x64'">x64</ShortPlatform>
   </PropertyGroup>
   <ItemGroup>
-    <ClInclude Include="..\include\bits\libcu_dirent.h" />
-    <ClInclude Include="..\include\bits\libcu_fpmax.h" />
-    <ClInclude Include="..\include\bits\libcu_stat.h" />
-    <ClInclude Include="..\include\bits\libcu_stdio.h" />
-    <ClInclude Include="..\include\crtdefscu.h" />
-    <ClInclude Include="..\include\ctypecu.h" />
-    <ClInclude Include="..\include\cuda_runtimecu.h" />
-    <ClInclude Include="..\include\ext\bitvec.h" />
-    <ClInclude Include="..\include\ext\hash.h" />
-    <ClInclude Include="..\include\ext\memfile.h" />
-    <ClInclude Include="..\include\ext\tagbase.h" />
-    <ClInclude Include="..\include\setjmpcu.h" />
-    <ClInclude Include="..\include\timecu.h" />
-    <ClInclude Include="..\include\_dirent.h" />
-    <ClInclude Include="..\include\direntcu.h" />
-    <ClInclude Include="..\include\errnocu.h" />
-    <ClInclude Include="..\include\featurescu.h" />
-    <ClInclude Include="..\include\host_functions.h" />
-    <ClInclude Include="..\include\regexcu.h" />
-    <ClInclude Include="..\include\sentinel-iomsg.h" />
-    <ClInclude Include="..\include\sentinel-stdiomsg.h" />
-    <ClInclude Include="..\include\sentinel-stdlibmsg.h" />
-    <ClInclude Include="..\include\sentinel.h" />
-    <ClInclude Include="..\include\stdargcu.h" />
-    <ClInclude Include="..\include\stddefcu.h" />
-    <ClInclude Include="..\include\stdiocu.h" />
-    <ClInclude Include="..\include\stdlibcu.h" />
-    <ClInclude Include="..\include\stringcu.h" />
-    <ClInclude Include="..\include\sys\statcu.h" />
-    <ClInclude Include="..\include\_unistd.h" />
-    <ClInclude Include="..\include\unistdcu.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="sentinel-msg.cpp" />
-    <ClCompile Include="sentinel.cpp" />
-    <ClCompile Include="sentinel-host.cpp" />
-    <ClCompile Include="host_functions.cpp" />
-    <None Include="ext\bitvec.cu" />
-    <None Include="ext\hash.cu" />
-    <None Include="ext\memfile.cu" />
     <CudaCompile Include="program.cu" />
-    <CudaCompile Include="libcu.cu" />
-    <CudaCompile Include="libcu.stdlib.cu" />
-    <None Include="ctypecu.cu" />
-    <None Include="sentinel-gpu.cu" />
-    <None Include="sys\statcu.cu" />
-    <None Include="direntcu.cu" />
-    <None Include="errnocu.cu" />
-    <None Include="regexcu.cu" />
-    <None Include="setjmpcu.cu" />
-    <None Include="stdiocu.cu" />
-    <None Include="stdlibcu.cu" />
-    <None Include="stringcu.cu" />
-    <None Include="timecu.cu" />
-    <None Include="unistdcu.cu" />
+    <CudaCompile Include="libcu.data.cu" />
+    <None Include="data.cu" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="libcu.native.nuspec" />
-    <None Include="libcu.native.targets" />
-    <None Include="_content\sample.libcu.cu" />
-    <None Include="_content\sample.libcu.ganging.cu" />
+    <None Include="libcu.data.native.nuspec" />
+    <None Include="libcu.data.native.targets" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{ABDDD338-DC1C-475E-9903-0FC99E18726E}</ProjectGuid>
+    <ProjectGuid>{D651983F-56C0-4681-81DC-6FA200F4EFC9}</ProjectGuid>
     <RootNamespace>libcu</RootNamespace>
-    <ProjectName>libcu</ProjectName>
+    <ProjectName>libcu.data</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -114,9 +60,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
+    <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
     <PlatformToolset>v110</PlatformToolset>
-    <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -159,10 +105,11 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>cudart.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libcu.$(CUARCH).lib;libcu.extra.$(CUARCH).lib;cudart.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(OutDir);$(CudaToolkitLibDir)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>"$(CudaToolkitBinDir)\nvcc.exe" -m=32 -arch=sm_$(CUARCH) -lib "$(IntDir)libcu.cu.obj" "$(IntDir)libcu.stdlib.cu.obj" "$(IntDir)host_functions.obj" "$(IntDir)sentinel.obj" "$(IntDir)sentinel-host.obj" "$(IntDir)sentinel-msg.obj" -o "$(OutDir)libcu.$(CUARCH).lib"</Command>
+      <Command>"$(CudaToolkitBinDir)\nvcc.exe" -m=32 -arch=sm_$(CUARCH) -lib "$(IntDir)libcu.data.cu.obj" -o "$(OutDir)libcu.data.$(CUARCH).lib"</Command>
     </PostBuildEvent>
     <CudaCompile>
       <Include>$(SolutionDir)include;%(Include)</Include>
@@ -180,10 +127,11 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>cudart.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libcu.$(CUARCH).lib;libcu.extra.$(CUARCH).lib;cudart.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(OutDir);$(CudaToolkitLibDir)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>"$(CudaToolkitBinDir)\nvcc.exe" -m=64 -arch=sm_$(CUARCH) -lib "$(IntDir)libcu.cu.obj" "$(IntDir)libcu.stdlib.cu.obj" "$(IntDir)host_functions.obj" "$(IntDir)sentinel.obj" "$(IntDir)sentinel-host.obj" "$(IntDir)sentinel-msg.obj" -o "$(OutDir)libcu.$(CUARCH).lib"</Command>
+      <Command>"$(CudaToolkitBinDir)\nvcc.exe" -m=64 -arch=sm_$(CUARCH) -lib "$(IntDir)libcu.data.cu.obj" -o "$(OutDir)libcu.data.$(CUARCH).lib"</Command>
     </PostBuildEvent>
     <CudaCompile>
       <Include>$(SolutionDir)include;%(Include)</Include>
@@ -206,10 +154,11 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>cudart.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libcu.$(CUARCH).lib;libcu.extra.$(CUARCH).lib;cudart.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(OutDir);$(CudaToolkitLibDir)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>"$(CudaToolkitBinDir)\nvcc.exe" -m=32 -arch=sm_$(CUARCH) -lib "$(IntDir)libcu.cu.obj" "$(IntDir)libcu.stdlib.cu.obj" "$(IntDir)host_functions.obj" "$(IntDir)sentinel.obj" "$(IntDir)sentinel-host.obj" "$(IntDir)sentinel-msg.obj" -o "$(OutDir)libcu.$(CUARCH).lib"</Command>
+      <Command>"$(CudaToolkitBinDir)\nvcc.exe" -m=32 -arch=sm_$(CUARCH) -lib "$(IntDir)libcu.data.cu.obj" -o "$(OutDir)libcu.data.$(CUARCH).lib"</Command>
     </PostBuildEvent>
     <CudaCompile>
       <Include>$(SolutionDir)include;%(Include)</Include>
@@ -231,10 +180,11 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>cudart.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libcu.$(CUARCH).lib;libcu.extra.$(CUARCH).lib;cudart.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(OutDir);$(CudaToolkitLibDir)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>"$(CudaToolkitBinDir)\nvcc.exe" -m=64 -arch=sm_$(CUARCH) -lib "$(IntDir)libcu.cu.obj" "$(IntDir)libcu.stdlib.cu.obj" "$(IntDir)host_functions.obj" "$(IntDir)sentinel.obj" "$(IntDir)sentinel-host.obj" "$(IntDir)sentinel-msg.obj" -o "$(OutDir)libcu.$(CUARCH).lib"</Command>
+      <Command>"$(CudaToolkitBinDir)\nvcc.exe" -m=64 -arch=sm_$(CUARCH) -lib "$(IntDir)libcu.data.cu.obj" -o "$(OutDir)libcu.data.$(CUARCH).lib"</Command>
     </PostBuildEvent>
     <CudaCompile>
       <Include>$(SolutionDir)include;%(Include)</Include>
