--- a/src/libcu.ext/libcu.ext.native.nuspec
+++ b/src/libcu.ext/libcu.ext.native.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package>
   <metadata>
-    <id>Libcu.Extra.Native</id>
+    <id>Libcu.Ext.Native</id>
     <version>0.5.0</version>
     <title>Libcu falloc</title>
     <authors>Contoso</authors>
@@ -18,12 +18,12 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="_build\**\libcu.extra.*.lib" target="build\native\lib" />
-    <file src="src\libcu.extra\*.targets" target="build\native" />
-    <file src="src\libcu.extra\**\*.h" exclude="src\libcu.extra\_*\**\*" target="build\native\include" />
-    <!--<file src="src\libcu.extra\_content\*" target="content" />-->
-    <file src="src\libcu.extra\**\*.cu" exclude="src\libcu.extra\_*\**\*" target="src" />
-    <file src="src\libcu.extra\**\*.h" exclude="src\libcu.extra\_*\**\*" target="src" />
-    <file src="src\libcu.extra\**\*.tcl" exclude="src\libcu.extra\_*\**\*" target="src" />
+    <file src="_build\**\libcu.ext.*.lib" target="build\native\lib" />
+    <file src="src\libcu.ext\*.targets" target="build\native" />
+    <file src="src\libcu.ext\**\*.h" exclude="src\libcu.ext\_*\**\*" target="build\native\include" />
+    <!--<file src="src\libcu.ext\_content\*" target="content" />-->
+    <file src="src\libcu.ext\**\*.cu" exclude="src\libcu.ext\_*\**\*" target="src" />
+    <file src="src\libcu.ext\**\*.h" exclude="src\libcu.ext\_*\**\*" target="src" />
+    <file src="src\libcu.ext\**\*.tcl" exclude="src\libcu.ext\_*\**\*" target="src" />
   </files>
 </package>
